annoying shift of nums fixed

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding-left: 1пшpx;
     height: $day-height;
     width: $day-width;
     background-color: #eee;
